# capacitance-measurement-module

./: .gitignore  ATTRIBUTION.md  BUILDING.md  README.md
firmware/: CMakeLists.txt  main.c
kicad/: cap-module.kicad_pro  cap-module.kicad_sch  fp-lib-table  sym-lib-table
kicad/project-libraries/AD7747/: ATTRIBUTION.md  Analog_ADC_AD7747.kicad_sym
kicad/project-libraries/NetShield/: ATTRIBUTION.md  Device_NetShield.kicad_sym
kicad/project-libraries/NetShield/NetShield.pretty/: NetShield-1-1x1SH_2Layer_Pad0.5mm.kicad_mod
kicad/project-libraries/RaspberryPi_Pico/: ATTRIBUTION.md
pcb/project-libraries/AD7747/: ATTRIBUTION.md
pcb/project-libraries/NetShield/: Device_NetShield.kicad_sym
pcb/project-libraries/NetShield/NetShield.pretty/: NetShield-1-1SH_2Layer_Pad0.5mm.kicad_mod
